Fixed css alignment of text in Kogan plugin

--- a/skin/frontend/smartwave/porto/css/korifi.salenotice.css
+++ b/skin/frontend/smartwave/porto/css/korifi.salenotice.css
@@ -2,7 +2,7 @@
 
     background: rgba(245,245,245,0.7);
     color: #000;
-    width: 260px;
+    width: 275px;
     border: solid 1px #d4d4d4;
     border-radius: 2px;
     padding: 5px;
